--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <div style="width:50%;margin:20px auto;padding:2px;border-color:#373737 #FFF #FFF #373737; border:2px solid blue;">
 <div style="padding:2px;border-color:#373737 #FFF #FFF #373737; border:2px solid blue;">
-<p style="color:red;font-weight:bold;text-align:center;vertical-align:middle;">目前模组开发急需材质作者，如有意向请联系我。</p>
+<p style="color:red;font-weight:bold;text-align:center;vertical-align:middle;">目前模组开发急需材质作者，如有意向请<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">联系我</a>。</p>
 </div></div>
 
 <p style="color:red">🎉欢迎来到原版模组《更多的合成》主页！</p>
@@ -77,7 +77,7 @@
 	<td>Minecraft Java版 19w08a+</td>
 	<td>Crafting++ 1.9测试版m02d24</td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m02d24.zip">github</a>
-      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m02d24.zip">官方</a></td>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m02d24.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
 </tr>
 <tr>
@@ -284,6 +284,7 @@
 · <a href="#grafter"><span class="ci" style="background-position: -128px -144px;"></span>剪枝器</a> 
 · <a href="#glass_pickaxe"><span class="ci" style="background-position: -112px -416px;"></span>玻璃镐</a>
 · <a href="#roost"><span class="ci" style="background-position: -16px -592px;"></span>鸡窝</a>
+· <a href="#firecrackers"><span class="ci" style="background-position: -80px -624px;"></span>鞭炮</a>
 · <a href="#flags"><span class="ci" style="background-position: -0px -576px;"></span><span class="ci" style="background-position: -16px -576px;"></span><span class="ci" style="background-position: -32px -576px;"></span><span class="ci" style="background-position: -48px -576px;"></span><span class="ci" style="background-position: -64px -576px;"></span>旗帜</a>
 · <a href="#logos"><span class="ci" style="background-position: -80px -576px;"></span><span class="ci" style="background-position: -96px -576px;"></span><span class="ci" style="background-position: -112px -576px;"></span><span class="ci" style="background-position: -128px -576px;"></span><span class="ci" style="background-position: -144px -592px;"></span>标志</a>
 · <a href="#shield_pattern"><span class="ci" style="background-position: -0px -160px;"></span><span class="ci" style="background-position: -16px -160px;"></span><span class="ci" style="background-position: -32px -160px;"></span><span class="ci" style="background-position: -48px -160px;"></span><span class="ci" style="background-position: -64px -160px;"></span><span class="ci" style="background-position: -80px -160px;"></span><span class="ci" style="background-position: -96px -160px;"></span><span class="ci" style="background-position: -112px -160px;"></span><span class="ci" style="background-position: -128px -160px;"></span><span class="ci" style="background-position: -144px -176px;"></span>盾牌图案</a>
@@ -2597,14 +2598,24 @@
 <span class="ci roost" title="鸡窝"></span>
 </span></td>
 <td>可作为鸡下蛋的位置，破坏后无掉落。</td></tr>
+
+<tr><th><strong id="firecrackers">鞭炮 (Firecrackers)</strong></th><td>火药+纸</td>
+<td><span class="ui cm" title="合成器">
+<span class="gunpowder" title="火药"></span>
+<span class="paper" title="纸"></span>
+<span class="gunpowder" title="火药"></span>
+<span class="paper" title="纸"></span>
+<span class="gunpowder" title="火药"></span>
+<span class="paper" title="纸"></span>
+<span class="gunpowder" title="火药"></span>
+<span class="paper" title="纸"></span>
+<span class="gunpowder" title="火药"></span>
+<span class="ci firecrackers" title="鞭炮"></span>
+</span></td>
+<td>放置后生成一个即将爆炸的tnt。</td></tr>
 </tbody></table>
 
 <h3 id="flags">旗帜 (Flags)</h3>
-<span class="ui single"><span class="ci china_flag"></span></span>
-<span class="ui single"><span class="ci usa_flag"></span></span>
-<span class="ui single"><span class="ci russia_flag"></span></span>
-<span class="ui single"><span class="ci uk_flag"></span></span>
-<span class="ui single"><span class="ci france_flag"></span></span>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>	
 <tr><th>中国国旗</th>
 <td>红色旗帜+牡丹+<a href="#burning_chrysanthe">焰光菊</a>+<a href="#marigold">金盏花</a></td>
@@ -2965,6 +2976,7 @@
 <span class="ui single"><span class="chainmail_chestplate"></span></span>
 <span class="ui single"><span class="chainmail_leggings"></span></span>
 <span class="ui single"><span class="chainmail_boots"></span></span>
+<p>修改了锁链盔甲的显示材质。</p>
 <table><thead><tr><th>名称</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>锁链头盔</th><td><a href="#iron_chain">铁链</a></td>
 <td><span class="ui cm" title="合成器">
