--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。该模组无明确的主题，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m02d24(魔法更新)，支持Minecraft Java版 1.14快照19w08a+。</p>
+<p>最新版本为测试版v1.9-m02d25(魔法更新)，支持Minecraft Java版 1.14快照19w08a+。</p>
 
 
 <h3 id="download">📦 下载地址</h3>
@@ -75,9 +75,9 @@
 <tbody>
 <tr>
 	<td>Minecraft Java版 19w08a+</td>
-	<td>Crafting++ 1.9测试版m02d24</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m02d24.zip">github</a>
-	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m02d24.zip">官方</a></td>
+	<td>Crafting++ 1.9测试版m02d25</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m02d25.zip">github</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m02d25.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
 </tr>
 <tr>
@@ -275,8 +275,8 @@
   <a href="#portable_crafting_table"><span class="ci" style="background-position: -0px -144px;"></span>便携式工作台</a> 
 · <a href="#portable_crafting_machine"><span class="ci" style="background-position: -80px -608px;"></span>便携式合成器</a> 
 · <a href="#magnet"><span class="ci" style="background-position: -16px -144px;"></span>磁铁</a> 
-· <a href="#time_conditioner"><span class="ci" style="background-position: -32px -144px;"></span>时间调节器</a> 
 · <a href="#time_checker"><span class="ci" style="background-position: -48px -144px;"></span>报时器</a> 
+· <a href="#time_conditioner"><span class="ci" style="background-position: -32px -144px;"></span>时间调节器</a> 
 · <a href="#origin_of_the_world"><span class="ci" style="background-position: -64px -144px;"></span>世界之源</a> 
 · <a href="#compressor"><span class="ci" style="background-position: -80px -144px;"></span>压缩器</a> 
 · <a href="#elder_s_words"><span class="ci" style="background-position: -96px -144px;"></span>年长者之教诲</a> 
@@ -2464,35 +2464,35 @@
 </span></td>
 <td>自动将附近物品吸引过来。右击依次切换范围为0/8/16米。若放置放物品展示框，可吸引附近16米的物品到所在处。</td></tr>
 
-<tr><th><strong id="time_conditioner">时间调节器 (Time Conditioner)</strong></th><td><a href="#enchanted_gold">附魔金锭</a>+红石</td>
-<td><span class="ui cm" title="合成器">
-<span class="empty"></span>
-<span class="ci enchanted_gold" title="附魔金锭"></span>
-<span class="empty"></span>
-<span class="ci enchanted_gold" title="附魔金锭"></span>
-<span class="redstone" title="红石"></span>
-<span class="ci enchanted_gold" title="附魔金锭"></span>
-<span class="empty"></span>
-<span class="ci enchanted_gold" title="附魔金锭"></span>
-<span class="empty"></span>
-<span class="ci time_conditioner" title="时间调节器"></span>
-</span></td>
-<td>右击依次切换模式为作物生长速度加倍/作物生长速度恢复/停止日夜循环/开启日夜循环。效果不能叠加。</td></tr>
-
 <tr><th><strong id="time_checker">报时器 (Time Checker)</strong></th><td><a href="#enchanted_diamond">附魔钻石</a>+红石</td>
 <td><span class="ui cm" title="合成器">
 <span class="empty"></span>
-<span class="ci enchanted_diamond" title="附魔钻石"></span>
+<span class="ci enchanted_gold" title="附魔金锭"></span>
 <span class="empty"></span>
-<span class="ci enchanted_diamond" title="附魔钻石"></span>
+<span class="ci enchanted_gold" title="附魔金锭"></span>
 <span class="redstone" title="红石"></span>
-<span class="ci enchanted_diamond" title="附魔钻石"></span>
+<span class="ci enchanted_gold" title="附魔金锭"></span>
 <span class="empty"></span>
-<span class="ci enchanted_diamond" title="附魔钻石"></span>
+<span class="ci enchanted_gold" title="附魔金锭"></span>
 <span class="empty"></span>
 <span class="ci time_checker" title="报时器"></span>
 </span></td>
 <td>放置于物品展示框后可报时。右击消耗4点经验将时间增加1200刻(60秒)。</td></tr>
+
+<tr><th><strong id="time_conditioner">时间调节器 (Time Conditioner)</strong></th><td><a href="#enchanted_gold">附魔金锭</a>+红石</td>
+<td><span class="ui cm" title="合成器">
+<span class="empty"></span>
+<span class="ci enchanted_diamond" title="附魔钻石"></span>
+<span class="empty"></span>
+<span class="ci enchanted_diamond" title="附魔钻石"></span>
+<span class="redstone" title="红石"></span>
+<span class="ci enchanted_diamond" title="附魔钻石"></span>
+<span class="empty"></span>
+<span class="ci enchanted_diamond" title="附魔钻石"></span>
+<span class="empty"></span>
+<span class="ci time_conditioner" title="时间调节器"></span>
+</span></td>
+<td>右击依次切换模式为作物生长速度加倍/作物生长速度恢复/停止日夜循环/开启日夜循环。效果不能叠加。</td></tr>
 
 <tr><th><strong id="origin_of_the_world">世界之源 (Origin of the World)</strong></th><td><a href="#wing_of_sky">天空之翼</a>+<a href="#limb_of_ridge">山脉之肢</a>+红石</td>
 <td><span class="ui cm" title="合成器">
@@ -3312,12 +3312,26 @@
 <!------------------------------------------------------------------------------------------------->
 <h2 id="foods">饮食</h2>
 <h3 id="balance_food">营养均衡</h3>
-<ul>
-<li>玩家需要保持适当的体重以避免过于肥胖或过于瘦弱，这可以通过荤素搭配来实现。</li>
-<li>玩家身体超重(Fat>100)会行走缓慢。</li>
-<li>玩家体重过轻(Fat<-100)会变得虚弱。</li>
-<li>使用测重压力板(重质)可以测量出你的体重指数。</li>
-</ul>
+<p>食用食物会改变玩家的体重指数。当体重指数>100时，玩家会行走缓慢；当体重指数<-100时，玩家会变得虚弱。使用测重压力板(重质)可以测量出你的体重指数。</p>
+
+<table><thead><tr><th>体重指数</th><th>食物</th></tr></thead><tbody>
+<tr><td>-12</td><td>缤纷菜蔬</td></tr>
+<tr><td>-8</td><td>生缤纷菜蔬</td></tr>
+<tr><td>-6</td><td>蘑菇煲 甜菜汤 蜜汁炖菜</td></tr>
+<tr><td>-5</td><td>面包 烤马铃薯 烤胡萝卜 番茄酱 奶酪</td></tr>
+<tr><td>-4</td><td>苹果 金苹果 附魔金苹果 紫颂果 水果 葡萄干</td></tr>
+<tr><td>-3</td><td>南瓜派 胡萝卜 金胡萝卜</td></tr>
+<tr><td>-2</td><td>西瓜片 曲奇 毒马铃薯 甜浆果</td></tr>
+<tr><td>-1</td><td>干海带 甜菜根 马铃薯 饺子</td></tr>
+<tr><td>0</td><td>生土豆排骨 炸鱼薯条 汉堡/披萨/寿司/仰望星空派</td></tr>
+<tr><td>+1</td><td>小丑鱼 河豚</td></tr>
+<tr><td>+2</td><td>蜘蛛眼 生羊肉 生兔肉 生鸡肉 生鳕鱼 生鲑鱼 煮鸡蛋</td></tr>
+<tr><td>+3</td><td>生牛肉 生猪排 肉松面包</td></tr>
+<tr><td>+4</td><td>腐肉</td></tr>
+<tr><td>+5</td><td>熟兔肉 熟鳕鱼</td></tr>
+<tr><td>+6</td><td>熟鸡肉 熟羊肉 熟鲑鱼 烤鸡</td></tr>
+<tr><td>+8</td><td>牛排 猪排</td></tr>
+</tbody></table>
 
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th><strong id="enchanted_golden_apple">附魔金苹果 (Enchanted Golden Apple)</strong></th><td><a href="#enchanted_iron">附魔铁锭</a>+附魔书+<a href="#enchanted_gold">附魔金锭</a>+金苹果+<a href="#enchanted_diamond">附魔钻石</a>+<a href="#experience_bottle">附魔之瓶</a></td>
@@ -3598,7 +3612,7 @@
 <span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 </span></td></tr>
 
-<tr><th><strong id="raisin">葡萄干 (Raisin)</strong><br /><img src="items/hunger.png" style="width:18px;height:18px;" title="4" /><img src="items/hunger.png" style="width:18px;height:18px;" title="4" /></th><td>葡萄/金葡萄</td>
+<tr><th><strong id="raisin">葡萄干 (Raisin)</strong><br /><img src="items/hunger.png" style="width:18px;height:18px;" title="4" /><img src="items/hunger.png" style="width:18px;height:18px;" title="4" /><br/><span class="effects speed"></span> <span class="lore">速度 00:10</span></th><td>葡萄/金葡萄</td>
 <td><span class="ui fur" title="熔炉、烟熏炉或营火">
 <span class="ci grape" title="葡萄"></span>
 <span class="coal" title="燃料"></span>
@@ -5622,7 +5636,7 @@ scoreboard players set #rituals_time cppValue 1200
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-02-24</p>
+<p>最后更新 2019-02-25</p>
 </footer>
 </article>
 </body></html>
